Completed scripting for intial console calulator. Created basis for calculator interface on html.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,29 @@
 </head>
 <body>
     <h1>Calculator</h1>
+    <div class="calcContainer">
+        <div class="display">12345</div>
+        <div class="numContainer">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>0</button>
+                <button>.</button>
+                <button>=</button>
+        </div>
+        <div class="opContainer">
+            <button>clear</button>
+            <button>/</button>
+            <button>*</button>
+            <button>-</button>
+            <button>+</button>
+        </div>
+    </div>
 </body>
 </html>
