Fixed layout of calculator ui on HTML. Added CSS on calculator to reflect default calculator layout. Added initial button configuration to script to place number buttons in display.

--- a/index.html
+++ b/index.html
@@ -9,29 +9,41 @@
 </head>
 <body>
     <h1>Calculator</h1>
-    <div class="calcContainer">
-        <div class="display">12345</div>
-        <div class="numContainer">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>0</button>
-                <button>.</button>
-                <button>=</button>
+        <div class="calc">
+            <div class="display">12345</div>
+            <div class="input">
+                <div class="numContainer">
+                    <div class="row">
+                        <button class="btnClear">Clear</button>
+                    </div>
+                    <div class="row">                        
+                        <button class="btnOne">1</button>
+                        <button class="btnTwo">2</button>
+                        <button class="btnThree">3</button>
+                    </div>
+                    <div class="row">                        
+                        <button class="btnFour">4</button>
+                        <button class="btnFive">5</button>
+                        <button class="btnSix">6</button>
+                    </div>
+                    <div class="row">                        
+                        <button class="btnSeven">7</button>
+                        <button class="btnEight">8</button>
+                        <button class="btnNine">9</button>
+                    </div>
+                    <div class="row">                        
+                        <button class="btnZero">0</button>
+                        <button class="btnDot">.</button>
+                    </div>
+                </div>
+                <div class="opContainer">
+                    <button class="btnDivide">÷</button>
+                    <button class="btnMultiply">x</button>
+                    <button class="btnMinus">-</button>
+                    <button class="btnAdd">+</button>
+                    <button class="btnEquals">=</button>
+                <div>
+            </div>        
         </div>
-        <div class="opContainer">
-            <button>clear</button>
-            <button>/</button>
-            <button>*</button>
-            <button>-</button>
-            <button>+</button>
-        </div>
-    </div>
 </body>
 </html>
