Changed number buttons class in html to the same class to reduce redundancy. Used querySelectorAll and forEach on number buttons in js file to reduce redundancy. Created separate function to display first and second set of numbers in operation to create a less bloated onclick function.

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
                         <button class="btnClear">Clear</button>
                     </div>
                     <div class="row">                        
-                        <button class="btnOne">1</button>
-                        <button class="btnTwo">2</button>
-                        <button class="btnThree">3</button>
+                        <button class="btnNum">1</button>
+                        <button class="btnNum">2</button>
+                        <button class="btnNum">3</button>
                     </div>
                     <div class="row">                        
-                        <button class="btnFour">4</button>
-                        <button class="btnFive">5</button>
-                        <button class="btnSix">6</button>
+                        <button class="btnNum">4</button>
+                        <button class="btnNum">5</button>
+                        <button class="btnNum">6</button>
                     </div>
                     <div class="row">                        
-                        <button class="btnSeven">7</button>
-                        <button class="btnEight">8</button>
-                        <button class="btnNine">9</button>
+                        <button class="btnNum">7</button>
+                        <button class="btnNum">8</button>
+                        <button class="btnNum">9</button>
                     </div>
                     <div class="row">                        
-                        <button class="btnZero">0</button>
+                        <button class="btnNum btnZero">0</button>
                         <button class="btnDot">.</button>
                     </div>
                 </div>
