Fixed missing .textContent values in some functions. Changed onclick events for operators to use the textContent from their respective buttons instead of manual inputs in js script. Changed operate function to reflect buttons in html and removed console.log operation in operate function. Created function for equals buttons and onclick event listener  for equals button.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="row">                        
                         <button class="btnNum btnZero">0</button>
-                        <button class="btnDot">.</button>
+                        <button class="btnNum btnDot">.</button>
                     </div>
                 </div>
                 <div class="opContainer">
