Added default result variable. Added html and scripting for 2nd display to show first and second operand and current operator. Updated clear button to clear 2nd display. Moved function that makes numOne = result to operate function and changed equals function to shwo result in primary display instead of numOne to account for secondary display. Added function that clears variables if a number button is pressed before a new operand is establishedd after an operation is completded.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <h1>Calculator</h1>
         <div class="calc">
-            <div class="display">0</div>
+            <div class="displayContainer">
+                <div class="displayOP"></div>
+                <div class="display">0</div>
+            </div>
             <div class="input">
                 <div class="numContainer">
                     <div class="row">
