Added Del button to html. Changed Clear to AC. Converted individual operator querySelectors and onclick events to a single querySelectorAll array and forEach function. Fixed equals function to only execute if numOne, NumTwo and operator are not empty.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <div class="input">
                 <div class="numContainer">
                     <div class="row">
-                        <button class="btnClear">Clear</button>
+                        <button class="btnClear">AC</button>
+                        <button class="btnDel">Del</button>
                     </div>
                     <div class="row">                        
                         <button class="btnNum">1</button>
@@ -40,10 +41,10 @@
                     </div>
                 </div>
                 <div class="opContainer">
-                    <button class="btnDivide">÷</button>
-                    <button class="btnMultiply">x</button>
-                    <button class="btnMinus">-</button>
-                    <button class="btnAdd">+</button>
+                    <button class="btnOp">÷</button>
+                    <button class="btnOp">x</button>
+                    <button class="btnOp">-</button>
+                    <button class="btnOp">+</button>
                     <button class="btnEquals">=</button>
                 <div>
             </div>        
