Removed boolean in if statement of equals function that checks if numOne is empty. Added separate funtion for licking on . button that checks if a . has been used in an operand and disables it if so.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="row">                        
                         <button class="btnNum btnZero">0</button>
-                        <button class="btnNum btnDot">.</button>
+                        <button class="btnDot">.</button>
                     </div>
                 </div>
                 <div class="opContainer">
