Added check to see if result is NaN through dividing 0 by 0 and will display error message. Added else statement to delete function to stop function if nothing to delete. Added keyboard attribute to html to link to keydown events. Added event listerner to keydown to enable keyboard usage for calculator.

--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
                         <button class="btnDel">Del</button>
                     </div>
                     <div class="row">                        
-                        <button class="btnNum">1</button>
-                        <button class="btnNum">2</button>
-                        <button class="btnNum">3</button>
+                        <button keyboard="1"  class="btnNum">1</button>
+                        <button keyboard="2" class="btnNum">2</button>
+                        <button keyboard="3"class="btnNum">3</button>
                     </div>
                     <div class="row">
-                        <button class="btnNum">4</button>                        
-                        <button class="btnNum">5</button>
-                        <button class="btnNum">6</button>
+                        <button keyboard="4" class="btnNum">4</button>                        
+                        <button keyboard="5" class="btnNum">5</button>
+                        <button keyboard="6" class="btnNum">6</button>
                     </div>
                     <div class="row">                        
-                        <button class="btnNum">7</button>
-                        <button class="btnNum">8</button>
-                        <button class="btnNum">9</button>
+                        <button keyboard="7" class="btnNum">7</button>
+                        <button keyboard="8" class="btnNum">8</button>
+                        <button keyboard="9" class="btnNum">9</button>
                     </div>
                     <div class="row">                        
-                        <button class="btnNum btnZero">0</button>
-                        <button class="btnDot">.</button>
+                        <button keyboard="0" class="btnNum btnZero">0</button>
+                        <button keyboard="." class="btnDot">.</button>
                     </div>
                 </div>
                 <div class="opContainer">
-                    <button class="btnOp">÷</button>
-                    <button class="btnOp">x</button>
-                    <button class="btnOp">-</button>
-                    <button class="btnOp">+</button>
-                    <button class="btnEquals">=</button>
+                    <button keyboard="/" class="btnOp">÷</button>
+                    <button keyboard="*" class="btnOp">x</button>
+                    <button keyboard="-" class="btnOp">-</button>
+                    <button keyboard="+" class="btnOp">+</button>
+                    <button keyboard="=" class="btnEquals">=</button>
                 <div>
             </div>        
         </div>
